# DSQuant

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  clean.sh  compile_commands.json  generate_coverage.sh  run_benchmarks.sh  run_coverage.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/lib/dsquant/: Makefile  cmake_install.cmake
benchmarks/: CMakeLists.txt  benchmark_statistics.cpp
cmake/: CTestConfig.cmake.in  CTestCustom.cmake.in  CodeCoverage.cmake  coverage_post_test.sh.in
docs/: BUILD.md  BUILDING.md  COVERAGE.md  DEVELOPMENT.md  MODULES.md  QUICKREF.md
examples/: CMakeLists.txt  basic_example.cpp
lib/dsquant/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp
lib/dsquant/benchmark/: fibonacci_benchmark.cpp
lib/dsquant/test/: fibonacci_test.cpp
lib/include/dsquant/: statistics.hpp
lib/src/: statistics.cpp
scripts/: build.sh  clean.sh  format.sh  generate_coverage.sh  run_benchmarks.sh  run_coverage.sh  run_tests.sh  setup-hooks.sh
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/benchmark/: CMakeLists.txt  benchmark_statistics.cpp
src/core/include/dsquant/core/: statistics.hpp
src/core/test/: CMakeLists.txt  test_statistics.cpp
src/examples/: CMakeLists.txt  basic_example.cpp
src/lib/: CMakeLists.txt  statistics.cpp
src/lib/include/dsquant/: statistics.hpp
src/lib/src/: statistics.cpp
src/test/: test_statistics.cpp
src/tests/: CMakeLists.txt  main.cpp  test_statistics.cpp
tests/: CMakeLists.txt  main.cpp  test_statistics.cpp
